Feat: installation angular material

--- a/src/app/pages/acceuil/login/login.component.html
+++ b/src/app/pages/acceuil/login/login.component.html
@@ -1,1 +1,11 @@
-<p>login works!</p>
+<div class="right_page">
+  <mat-form-field>
+      <mat-label><mat-icon>favorite</mat-icon> Nom utilisateur</mat-label>
+      <input matInput >
+    </mat-form-field>
+
+</div>
+
+<div class="left_page">
+
+</div>
